# PYTHON_SCRIPTS

./: .gitignore  pyproject.toml
FAN_FAV_PAGE/: MOCK_DATA.csv  countdown.py  fake_fan_favorite_votes.csv  main.py  notebook.ipynb
SCANNER/: main_scan.py
ZIP_CODES/: ca_zip.py
streamlit_barcode_scanner/: README.md  app.py  packages.txt  requirements.txt
