[project]
name = "python-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.4.26",
    "ipykernel>=6.29.5",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pipreqs>=0.5.0",
    "pylibdmtx>=0.1.10",
    "pyzbar>=0.1.9",
    "setuptools>=80.9.0",
    "streamlit>=1.45.0",
]
